# mcp-server-qdrant

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml
src/mcp_server_qdrant/: mcp_server.py  qdrant.py  settings.py
src/mcp_server_qdrant/common/: filters.py  func_tools.py  wrap_filters.py
src/mcp_server_qdrant/embeddings/: fastembed.py
src/mcp_server_qdrant_im/: main.py  mcp_server.py  qdrant.py  server.py  settings.py
src/mcp_server_qdrant_im/common/: filters.py  wrap_filters.py
src/mcp_server_qdrant_im/embeddings/: base.py  factory.py  fastembed.py
tests/: test_fastembed_integration.py  test_qdrant_integration.py  test_settings.py
